# syscall_capture

./: .gitignore  CMakeLists.txt  README.md  buffer_view.cpp  buffer_view.hpp  clocks.cpp  clocks.hpp  configuration.cpp  configuration.hpp  execution_state.cpp  execution_state.hpp  file_write_permit.cpp  file_write_permit.hpp  file_writer.cpp  file_writer.hpp  header_writer.cpp  header_writer.hpp  information_elements.hpp  length_recorder.hpp  managed_buffers.c  managed_buffers.cpp  managed_buffers.h  managed_buffers.hpp  memory.cpp  memory.hpp  multi_unit_time.cpp  multi_unit_time.hpp  scoped_cursor_mover.cpp  scoped_cursor_mover.hpp  scoped_padder.hpp  scoped_tlv.hpp  segments.hpp  stopwatch.cpp  stopwatch.hpp  syscall_args.cpp  syscall_args.hpp  syscall_capture.c  syscall_capture.cpp  syscall_info.c  syscall_info.cpp  (+14 more)
.circleci/: config.yml
docs/: file_format.md  notes
